# ai_work_assistant

./: .gitignore  AI_Work_Assistant_Documentation.md  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  run.py  setup.py
config/: settings.json
docs/: development_roadmap.md
docs/technical/: api.md  architecture.md
docs/testing/: testing_strategy.md
docs/user/: user_guide.md
scripts/: build.py  build_exe.py
src/: main.py
src/core/config/: categorization_config.py
src/core/entities/: activity.py
src/core/events/: event_dispatcher.py  event_types.py
src/core/interfaces/: activity_repository.py
src/core/ml/: activity_categorizer.py  continuous_learner.py  data_preprocessor.py  feature_extractor.py  model_manager.py
src/core/services/: activity_monitor.py  analytics_service.py  prediction_service.py  session_service.py  task_suggestion_service.py  workspace_service.py
src/infrastructure/os/: app_controller.py  base_monitor.py  linux_monitor.py  macos_monitor.py  platform_monitor.py  windows_monitor.py
src/infrastructure/storage/: daily_encrypted_json_storage.py  encrypted_json_storage.py
src/presentation/ui/: charts.py  dashboard.py  settings_dialog.py  system_tray.py
src/presentation/ui/components/charts/: __init__.py  bar_chart.py  heatmap.py  pie_chart.py
src/presentation/ui/components/common/: metric_card.py  title_bar.py
src/presentation/ui/layouts/: activity_log_layout.py  configuration_layout.py  dashboard_layout.py  overview_layout.py  statistics_layout.py  system_log_layout.py  workspace_layout.py
src/presentation/ui/utils/: activity_mapper.py  config_store.py  data_access.py  data_mappers.py  empty_state.py  error_handler.py  loading_state.py  log_handler.py  productivity_mapper.py  service_connector.py  theme.py  workspaces_store.py
tests/: conftest.py
tests/core/entities/: test_activity.py
tests/core/events/: test_events_system.py
tests/core/ml/: test_activity_categorizer.py  test_continuous_learner.py  test_feature_extractor.py  test_model_manager.py
tests/core/services/: test_activity_monitor.py  test_analytics_service.py  test_prediction_service.py  test_session_service.py  test_task_suggestion_service.py
tests/e2e/: test_e2e.py
tests/infrastructure/os/: test_platform_monitor.py
tests/infrastructure/storage/: test_encrypted_json_storage.py
tests/performance/: test_load.py  test_performance.py
(+2 files in other folders)
