[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_work_assistant"
version = "0.1.0"
description = "An AI-powered work assistant for productivity tracking and task management"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "AI Work Assistant Team" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Office/Business :: Time Tracking",
    "Topic :: Desktop Environment",
    "Topic :: System :: Monitoring"
]
dependencies = [
    "PyQt6>=6.4.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "psutil>=5.8.0",
    "cryptography>=3.4.0",
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.900",
    "flake8>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pre-commit>=2.17.0",
    "tox>=3.24.0",
    "build>=0.7.0",
    "twine>=3.8.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/ai_work_assistant"
Documentation = "https://github.com/yourusername/ai_work_assistant/docs"
Repository = "https://github.com/yourusername/ai_work_assistant.git"

[project.gui-scripts]
ai-work-assistant = "ai_work_assistant.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=ai_work_assistant"
testpaths = ["tests"]
qt_api = "pyqt6"